@@ -1,3 +1,9 @@
+2004-10-27  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/bits/basic_string.h (_M_replace_aux, _M_replace_safe):
+	Move out of line...
+	* include/bits/basic_string.tcc: ... here.
+
 2004-10-26  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/bits/basic_string.h (append(const basic_string&),
